1.0.0
-----
 * Make hash algorithm implementation pluggable (CASSANDRASC-114)
 * Fix ClosedChannelException when downloading from S3 (CASSANDRASC-112)
 * Fix NPE thrown when getting StorageClient from pool (CASSANDRASC-110)
 * Relocate Sidecar common classes in vertx-client-shaded (CASSANDRASC-104)
 * Automated yaml type binding for deserialization (CASSANDRASC-103)
 * Upgrade Vert.x version in Sidecar to 4.5 (CASSANDRASC-101)
 * Break restore job into stage and import phases and persist restore slice status on phase completion (CASSANDRASC-99)
 * Improve logging for traffic shaping / rate limiting configuration (CASSANDRASC-98)
 * Startup Validation Failures when Checking Sidecar Connectivity (CASSANDRASC-86)
 * Add support for additional digest validation during SSTable upload (CASSANDRASC-97)
 * Add sidecar client changes for restore from S3 (CASSANDRASC-95)
 * Add restore SSTables from S3 into Cassandra feature to Cassandra Sidecar (CASSANDRASC-92)
 * Define routing order for http routes (CASSANDRASC-93)
 * AbstractHandler is handling the request even when it fails to extract params (CASSANDRASC-91)
 * Fix Sidecar TokenRangeReplicas endpoint to unwrap the token-range by partitioner's range for a single node clusters (CASSANDRASC-90)
 * Expose TTL option for the create snapshot endpoint (CASSANDRASC-85)
 * Allow DriverUtils to be pluggable (CASSANDRASC-88)
 * Add JMX health checks during the periodic health checks (CASSANDRASC-87)
 * Sidecar should be able to load metadata even if the local instance is unavailable (CASSANDRASC-79)
 * Expose additional SSL configuration options for the Sidecar Service (CASSANDRASC-82)
 * Expose additional node settings (CASSANDRASC-84)
 * Sidecar does not handle keyspaces and table names with mixed case (CASSANDRASC-76)
 * Require gossip to be enabled for ring and token ranges mapping endpoints (CASSANDRASC-83)
 * Improve TokenRangeReplicasResponse payload (CASSANDRASC-81)